cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)

#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)


add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(100-same-tree leetcode/editor/cn/100-same-tree.cpp)
add_executable(100275-ShuZuZhongZhongFuDeShuZiLcof leetcode/editor/cn/100275-ShuZuZhongZhongFuDeShuZiLcof.cpp)
add_executable(100276-ErWeiShuZuZhongDeChaZhaoLcof leetcode/editor/cn/100276-ErWeiShuZuZhongDeChaZhaoLcof.cpp)
add_executable(100280-TiHuanKongGeLcof leetcode/editor/cn/100280-TiHuanKongGeLcof.cpp)
add_executable(100282-CongWeiDaoTouDaYinLianBiaoLcof leetcode/editor/cn/100282-CongWeiDaoTouDaYinLianBiaoLcof.cpp)
add_executable(100283-ZhongJianErChaShuLcof leetcode/editor/cn/100283-ZhongJianErChaShuLcof.cpp)
add_executable(100273-YongLiangGeZhanShiXianDuiLieLcof leetcode/editor/cn/100273-YongLiangGeZhanShiXianDuiLieLcof.cpp)
add_executable(100274-FeiBoNaQiShuLieLcof leetcode/editor/cn/100274-FeiBoNaQiShuLieLcof.cpp)
add_executable(100277-QingWaTiaoTaiJieWenTiLcof leetcode/editor/cn/100277-QingWaTiaoTaiJieWenTiLcof.cpp)
add_executable(100278-XuanZhuanShuZuDeZuiXiaoShuZiLcof leetcode/editor/cn/100278-XuanZhuanShuZuDeZuiXiaoShuZiLcof.cpp)
add_executable(100279-JuZhenZhongDeLuJingLcof leetcode/editor/cn/100279-JuZhenZhongDeLuJingLcof.cpp)
add_executable(100281-JiQiRenDeYunDongFanWeiLcof leetcode/editor/cn/100281-JiQiRenDeYunDongFanWeiLcof.cpp)
add_executable(100284-JianShengZiLcof leetcode/editor/cn/100284-JianShengZiLcof.cpp)
add_executable(100285-JianShengZiIiLcof leetcode/editor/cn/100285-JianShengZiIiLcof.cpp)
add_executable(100292-ErJinZhiZhong1deGeShuLcof leetcode/editor/cn/100292-ErJinZhiZhong1deGeShuLcof.cpp)
add_executable(100295-ShuZhiDeZhengShuCiFangLcof leetcode/editor/cn/100295-ShuZhiDeZhengShuCiFangLcof.cpp)
add_executable(100296-DaYinCong1daoZuiDaDeNweiShuLcof leetcode/editor/cn/100296-DaYinCong1daoZuiDaDeNweiShuLcof.cpp)