cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)

#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)


add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(100-same-tree leetcode/editor/cn/100-same-tree.cpp)
add_executable(100275-ShuZuZhongZhongFuDeShuZiLcof leetcode/editor/cn/100275-ShuZuZhongZhongFuDeShuZiLcof.cpp)
add_executable(100276-ErWeiShuZuZhongDeChaZhaoLcof leetcode/editor/cn/100276-ErWeiShuZuZhongDeChaZhaoLcof.cpp)
add_executable(100280-TiHuanKongGeLcof leetcode/editor/cn/100280-TiHuanKongGeLcof.cpp)
add_executable(100282-CongWeiDaoTouDaYinLianBiaoLcof leetcode/editor/cn/100282-CongWeiDaoTouDaYinLianBiaoLcof.cpp)
add_executable(100283-ZhongJianErChaShuLcof leetcode/editor/cn/100283-ZhongJianErChaShuLcof.cpp)
add_executable(100273-YongLiangGeZhanShiXianDuiLieLcof leetcode/editor/cn/100273-YongLiangGeZhanShiXianDuiLieLcof.cpp)
add_executable(100274-FeiBoNaQiShuLieLcof leetcode/editor/cn/100274-FeiBoNaQiShuLieLcof.cpp)
add_executable(100277-QingWaTiaoTaiJieWenTiLcof leetcode/editor/cn/100277-QingWaTiaoTaiJieWenTiLcof.cpp)
add_executable(100278-XuanZhuanShuZuDeZuiXiaoShuZiLcof leetcode/editor/cn/100278-XuanZhuanShuZuDeZuiXiaoShuZiLcof.cpp)
add_executable(100279-JuZhenZhongDeLuJingLcof leetcode/editor/cn/100279-JuZhenZhongDeLuJingLcof.cpp)
add_executable(100281-JiQiRenDeYunDongFanWeiLcof leetcode/editor/cn/100281-JiQiRenDeYunDongFanWeiLcof.cpp)
add_executable(100284-JianShengZiLcof leetcode/editor/cn/100284-JianShengZiLcof.cpp)
add_executable(100285-JianShengZiIiLcof leetcode/editor/cn/100285-JianShengZiIiLcof.cpp)
add_executable(100292-ErJinZhiZhong1deGeShuLcof leetcode/editor/cn/100292-ErJinZhiZhong1deGeShuLcof.cpp)
add_executable(100295-ShuZhiDeZhengShuCiFangLcof leetcode/editor/cn/100295-ShuZhiDeZhengShuCiFangLcof.cpp)
add_executable(100296-DaYinCong1daoZuiDaDeNweiShuLcof leetcode/editor/cn/100296-DaYinCong1daoZuiDaDeNweiShuLcof.cpp)
add_executable(100299-ShanChuLianBiaoDeJieDianLcof leetcode/editor/cn/100299-ShanChuLianBiaoDeJieDianLcof.cpp)
add_executable(100297-ZhengZeBiaoDaShiPiPeiLcof leetcode/editor/cn/100297-ZhengZeBiaoDaShiPiPeiLcof.cpp)
add_executable(100302-BaoHanMinhanShuDeZhanLcof leetcode/editor/cn/100302-BaoHanMinhanShuDeZhanLcof.cpp)
add_executable(100329-ZaiPaiXuShuZuZhongChaZhaoShuZiLcof leetcode/editor/cn/100329-ZaiPaiXuShuZuZhongChaZhaoShuZiLcof.cpp)
add_executable(100316-DiYiGeZhiChuXianYiCiDeZiFuLcof leetcode/editor/cn/100316-DiYiGeZhiChuXianYiCiDeZiFuLcof.cpp)
add_executable(100311-CongShangDaoXiaDaYinErChaShuLcof leetcode/editor/cn/100311-CongShangDaoXiaDaYinErChaShuLcof.cpp)
add_executable(100312-CongShangDaoXiaDaYinErChaShuIiLcof leetcode/editor/cn/100312-CongShangDaoXiaDaYinErChaShuIiLcof.cpp)
add_executable(100314-CongShangDaoXiaDaYinErChaShuIiiLcof leetcode/editor/cn/100314-CongShangDaoXiaDaYinErChaShuIiiLcof.cpp)
add_executable(100287-ShuDeZiJieGouLcof leetcode/editor/cn/100287-ShuDeZiJieGouLcof.cpp)
add_executable(100291-DiaoZhengShuZuShunXuShiQiShuWeiYuOuShuQianMianLcof leetcode/editor/cn/100291-DiaoZhengShuZuShunXuShiQiShuWeiYuOuShuQianMianLcof.cpp)
add_executable(100322-HeWeiSdeLiangGeShuZiLcof leetcode/editor/cn/100322-HeWeiSdeLiangGeShuZiLcof.cpp)
add_executable(100328-FanZhuanDanCiShunXuLcof leetcode/editor/cn/100328-FanZhuanDanCiShunXuLcof.cpp)
add_executable(100289-DuiChengDeErChaShuLcof leetcode/editor/cn/100289-DuiChengDeErChaShuLcof.cpp)
add_executable(100286-HeBingLiangGePaiXuDeLianBiaoLcof leetcode/editor/cn/100286-HeBingLiangGePaiXuDeLianBiaoLcof.cpp)
add_executable(100326-LiangGeLianBiaoDeDiYiGeGongGongJieDianLcof leetcode/editor/cn/100326-LiangGeLianBiaoDeDiYiGeGongGongJieDianLcof.cpp)
add_executable(100294-LianBiaoZhongDaoShuDiKgeJieDianLcof leetcode/editor/cn/100294-LianBiaoZhongDaoShuDiKgeJieDianLcof.cpp)
add_executable(100344-GuPiaoDeZuiDaLiRunLcof leetcode/editor/cn/100344-GuPiaoDeZuiDaLiRunLcof.cpp)
add_executable(100304-LianXuZiShuZuDeZuiDaHeLcof leetcode/editor/cn/100304-LianXuZiShuZuDeZuiDaHeLcof.cpp)
add_executable(100327-LiWuDeZuiDaJieZhiLcof leetcode/editor/cn/100327-LiWuDeZuiDaJieZhiLcof.cpp)
add_executable(100325-BaShuZiFanYiChengZiFuChuanLcof leetcode/editor/cn/100325-BaShuZiFanYiChengZiFuChuanLcof.cpp)
add_executable(100332-ZuiChangBuHanZhongFuZiFuDeZiZiFuChuanLcof leetcode/editor/cn/100332-ZuiChangBuHanZhongFuZiFuDeZiZiFuChuanLcof.cpp)
add_executable(100301-ZuiXiaoDeKgeShuLcof leetcode/editor/cn/100301-ZuiXiaoDeKgeShuLcof.cpp)
add_executable(100323-BaShuZuPaiChengZuiXiaoDeShuLcof leetcode/editor/cn/100323-BaShuZuPaiChengZuiXiaoDeShuLcof.cpp)
add_executable(100341-BuKePaiZhongDeShunZiLcof leetcode/editor/cn/100341-BuKePaiZhongDeShunZiLcof.cpp)
add_executable(100303-ShuJuLiuZhongDeZhongWeiShuLcof leetcode/editor/cn/100303-ShuJuLiuZhongDeZhongWeiShuLcof.cpp)
add_executable(100345-Qiu12nLcof leetcode/editor/cn/100345-Qiu12nLcof.cpp)
add_executable(100319-ErChaShuDeShenDuLcof leetcode/editor/cn/100319-ErChaShuDeShenDuLcof.cpp)
add_executable(100342-PingHengErChaShuLcof leetcode/editor/cn/100342-PingHengErChaShuLcof.cpp)
add_executable(100346-ErChaSouSuoShuDeZuiJinGongGongZuXianLcof leetcode/editor/cn/100346-ErChaSouSuoShuDeZuiJinGongGongZuXianLcof.cpp)
add_executable(100347-ErChaShuDeZuiJinGongGongZuXianLcof leetcode/editor/cn/100347-ErChaShuDeZuiJinGongGongZuXianLcof.cpp)
add_executable(100335-BuYongJiaJianChengChuZuoJiaFaLcof leetcode/editor/cn/100335-BuYongJiaJianChengChuZuoJiaFaLcof.cpp)
add_executable(100317-ErChaShuZhongHeWeiMouYiZhiDeLuJingLcof leetcode/editor/cn/100317-ErChaShuZhongHeWeiMouYiZhiDeLuJingLcof.cpp)
add_executable(100305-ErChaSouSuoShuYuShuangXiangLianBiaoLcof leetcode/editor/cn/100305-ErChaSouSuoShuYuShuangXiangLianBiaoLcof.cpp)
add_executable(btree leetcode/editor/cn/include/btree.h)
add_executable(100333-ErChaSouSuoShuDeDiKdaJieDianLcof leetcode/editor/cn/100333-ErChaSouSuoShuDeDiKdaJieDianLcof.cpp)
add_executable(100320-ShuZuZhongShuZiChuXianDeCiShuLcof leetcode/editor/cn/100320-ShuZuZhongShuZiChuXianDeCiShuLcof.cpp)
add_executable(100321-ShuZuZhongShuZiChuXianDeCiShuIiLcof leetcode/editor/cn/100321-ShuZuZhongShuZiChuXianDeCiShuIiLcof.cpp)